Added files via upload

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h1 id="banner">Welcome to Gaurav's World</h1>      		
         	</div>
         	<div id="main">
-					<img src="C:\Users\Gaurav Mitra\Desktop\The Blog Project\My Blog\Gaurav\pics\Display1.jpg"  style="width:680px;height:425px;margin-top: 5px;">
+					<img src="Display1.jpg"  style="width:680px;height:425px;margin-top: 5px;">
 				</div>
 			</div>  
         </div>
