--- a/skill.html
+++ b/skill.html
@@ -6,12 +6,27 @@
         <title>Gaurav Mitra</title>
         <link rel="stylesheet" type="text/css" href="About.css" />
     </head>
-    <body>
+    <body>"
         <div id="header">
         	<div id="header_wrapper">
 				<h1 id="banner">Welcome to Gaurav's World</h1>      		
         	</div>
-        	<div id="main">SKILLS</div>
+        	<div id="main">
+				<div id="sk1" style="height: 150px;background-color: #FFFFDD; border-radius : 5%;">
+					<div id="first_interest" class="lower"style=" border-radius : 5%;">
+						<p> LANGUAGES KNOWN </p>
+					</div>
+					<div  class="right" style="line-height: 95%">
+						<p style="font-size : 14px; font-weight: bold;"> PYTHON &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp JAVA &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C++</p>
+						<p style="font-size : 14px; font-weight: bold;"> PYTHON &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp JAVA &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C++</p>
+						<p style="font-size : 14px; font-weight: bold;"> PYTHON &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp JAVA &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp C++</p>
+						</ul>
+					</div> 
+				</div>
+				<!--<div id="sk2" style="height: 100px; width: 810px;background-color: #FFFFDD; border-radius : 5%;margin-top : 10px">-->
+				<div id="sk3" style="height : 200px;background-color: #FFFFDD;margin-top : 10px;border-radius : 5%;"></div>
+				<div id="sk3" style="height : 130px;background-color: #FFFFDD;margin-top : 10px;border-radius : 5%;"></div>
+			</div>
         </div>
                 
         
